# mcs_simulation

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  agh.compose.yaml  build_and_run.sh  entrypoint.sh  ipv6-fix.sh  robot.compose.yaml  webots-headless.compose.yaml  webots-local.compose.yaml
config/: rosbot.rviz  xorg.conf
docker/: compose.yaml  webots_headless.compose.yaml
docker/webots_headless/: Dockerfile  start.sh
etc/: sysctl.conf
src/: run.sh
src/diagnostics/: check_camera_feeds.py  check_cams_fps.py
src/mcs_remote_control/: .gitignore  README.md  launch.sh  package-lock.json  package.json  vite.config.js
src/mcs_remote_control/src/: index.html  login.html
src/mcs_remote_control/src/js/: auth.js  config.js  login.js  main.js
src/mcs_remote_control/src/styles/: main.css
src/mcs_ros2/: package.xml  setup.cfg  setup.py
src/mcs_ros2/mcs_ros2/: camera_listener.py  camera_listener_v2.py  ros2_to_mcs.py  telemetry_listener.py  webots_listener.py
src/mcs_video_server/: requirements.txt  server.py
ubuntu_drone_simulation/: docker-compose.override.yml  docker-compose.yml
ubuntu_drone_simulation/gz-client/: Dockerfile
ubuntu_drone_simulation/gz-server/: Dockerfile  entrypoint.sh
ubuntu_drone_simulation/worlds/: empty.sdf
ubuntu_drone_simulation/worlds/harmonic_world/: gz_bridge.yaml  world.sdf
ubuntu_drone_simulation/worlds/harmonic_world/harmonic_terrain/: model.sdf
ubuntu_drone_simulation/worlds/harmonic_world/harmonic_terrain_objects/: model.sdf
ubuntu_drone_simulation/worlds/harmonic_world/lake_house/: model.config  (+1 more)
(+2 files in other folders)
