<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mcs_ros2</name>
  <version>0.0.1</version>
  <description>
    MCS ros2 package, which listens to webots-docker simulation and sends data to MCS using socket.io
  </description>
  <maintainer email="adrianstahl.2@icloud.com">adrians</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies -->
  <depend>sensor_msgs</depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- Python dependencies -->
  <exec_depend>aiortc</exec_depend>
  <exec_depend>python3-socketio</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- Test dependencies --> 
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
